--- a/EDA_intro.ipynb
+++ b/EDA_intro.ipynb
@@ -17,7 +17,13 @@
     "This notebook provides an in-depth introduction to EDA techniques with **real-world examples**.\n",
     "\n",
     "## Index\n",
-    "\n",
+    "1. [EDA Overview](#1-eda-overview)\n",
+    "   1. [Statistical Summaries](#11-statistical-summaries)\n",
+    "2. [Visualization techniques](#2-visualization-techniques)\n",
+    "3. [Missing values](#3-detecting-missing-values)\n",
+    "4. [Outliers](#4-outliers)\n",
+    "5. [Correlation analysis](#5-correlation-analysis)\n",
+    "6. [Extra Resources](#6-extra-resources)\n",
     "\n",
     "\n",
     "**Libraries used:**"
