--- a/EDA_overview.ipynb
+++ b/EDA_overview.ipynb
@@ -19,11 +19,11 @@
     "## Index\n",
     "1. [EDA Overview](#1-eda-overview)\n",
     "   1. [Statistical Summaries](#11-statistical-summaries)\n",
-    "2. [Visualization techniques](#2-visualization-techniques)\n",
-    "3. [Missing values](#3-detecting-missing-values)\n",
-    "4. [Outliers](#4-outliers)\n",
-    "5. [Correlation analysis](#5-correlation-analysis)\n",
-    "6. [Extra Resources](#6-extra-resources)\n",
+    "   2. [Visualization techniques](#21-visualization-techniques)\n",
+    "2. [Missing values](#3-detecting-missing-values)\n",
+    "3. [Outliers](#4-outliers)\n",
+    "4. [Correlation analysis](#5-correlation-analysis)\n",
+    "5. [Extra Resources](#6-extra-resources)\n",
     "\n",
     "\n",
     "**Libraries used:**"
@@ -47,9 +47,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. EDA Overview\n",
+    "## 1. EDA Overview and Insights\n",
     "\n",
-    "EDA consists of **descriptive statistics** and **visualizations** that provide insights into the dataset. We typically start by loading the data and checking its structure:"
+    "EDA consists of **descriptive statistics** (for numerical data) and **visualizations** that provide insights into the dataset. We typically start by loading the data and checking its structure:"
    ]
   },
   {
@@ -166,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2 Visualization Techniques\n",
+    "### 1.2 Visualization Techniques\n",
     "\n",
     "Visualising data helps identify trends, patterns, and anomalies.\n",
     "Common visualisation methods include:\n",
