--- a/DataInsights.ipynb
+++ b/DataInsights.ipynb
@@ -18,7 +18,12 @@
     "  \n",
     "## Index\n",
     "\n",
-    "\n",
+    "1. [Numerical Data](#1-numerical-data)\n",
+    "2. [Categorical Data](#2-categorical-data)\n",
+    "3. [Time Series Data](#3-time-series-data)\n",
+    "4. [Text Data](#4-text-data)\n",
+    "5. [Image Data](#5-image-data)\n",
+    "6. [Extra Resources](#6-extra-resources)\n",
     "\n",
     "**Libraries used:**"
    ]
