--- a/DataCleaning_Preprocessing.ipynb
+++ b/DataCleaning_Preprocessing.ipynb
@@ -143,24 +143,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of Outliers in Price: 3540\n"
+      "Number of Outliers in Price, using Z-Score: 1206\n",
+      "Number of Outliers in Price, using IQR: 3540\n"
      ]
     }
    ],
    "source": [
+    "from scipy.stats import zscore\n",
+    "\n",
+    "Z = zscore(df_diamonds[\"price\"])\n",
+    "outliers = df_diamonds[(Z < -3) | (Z > 3)]\n",
+    "print(f\"Number of Outliers in Price, using Z-Score: {outliers.shape[0]}\")\n",
+    "\n",
     "# Detecting outliers using IQR\n",
     "Q1 = df_diamonds['price'].quantile(0.25)\n",
     "Q3 = df_diamonds['price'].quantile(0.75)\n",
     "IQR = Q3 - Q1\n",
     "outliers = df_diamonds[(df_diamonds['price'] < (Q1 - 1.5 * IQR)) | (df_diamonds['price'] > (Q3 + 1.5 * IQR))]\n",
-    "print(f\"Number of Outliers in Price: {outliers.shape[0]}\")"
+    "print(f\"Number of Outliers in Price, using IQR: {outliers.shape[0]}\")"
    ]
   },
   {
