some minor details

--- a/DataCleaning_Preprocessing.ipynb
+++ b/DataCleaning_Preprocessing.ipynb
@@ -10,7 +10,7 @@
     "This process ensures that data is structured, error-free, and transformed into a format\n",
     "suitable for analysis.\n",
     "\n",
-    "This notebook will cover:\n",
+    "This notebook will cover the basis and simple techniques of:\n",
     "- Handling missing values\n",
     "- Detecting and treating outliers\n",
     "- Encoding categorical variables\n",
@@ -21,7 +21,12 @@
     "\n",
     "## Index\n",
     "\n",
-    "\n",
+    "1. [Missing Values](#1-missing-values)\n",
+    "2. [Outlier detection](#2-outlier-detection)\n",
+    "3. [Encoding Categorical Variables](#3-encoding-categorical-values)\n",
+    "4. [Scale and Normalisation](#4-scaling-and-normalizing-numerical-values)\n",
+    "5. [Feature Transformations](#5-feature-transformations)\n",
+    "6. [Extra Resources](#6-extra-resources)\n",
     "\n",
     "**Libraries used:**"
    ]
@@ -304,6 +309,18 @@
     "sns.histplot(df_diamonds['log_price'], bins=30, kde=True)\n",
     "plt.title(\"Log Transformed Price Distribution\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Extra Resources\n",
+    "\n",
+    "For further context and information:\n",
+    "\n",
+    "- [Encord Article](https://encord.com/blog/data-cleaning-data-preprocessing/)\n",
+    "- [Scikit-learn: Preprocessing Data](https://scikit-learn.org/stable/modules/preprocessing.html)"
    ]
   }
  ],
