--- a/FeatureEngineering_Selection.ipynb
+++ b/FeatureEngineering_Selection.ipynb
@@ -40,7 +40,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Feature Creation\n"
+    "## 1. Feature Creation\n",
+    "\n",
+    "Feature creation involves transforming raw data into features that better represent the underlying problem to predictive models, resulting in improved model accuracy on unseen data. We can divide this process in some groups:\n",
+    "\n",
+    "- **Interaction feature creation:** We can do some polynomial transformations on existing features, creating new ones (`Polynomial Features`), or we can combine features to capture interactions between them (`Interaction Terms`);\n",
+    "- **Binning and Discretization:** Basing on continuous variables, we can, respectively, convert them into discrete bins (`Binning`) or transform them into categorical variables (`Discretization`);\n",
+    "- **Time-Based features:** When dealing with these kinds of features, we can extract time components such as day, month, year, etc. or also calculate elapsed times, IE time deltas ($\\Delta  t$);\n",
+    "- **Text Data:** From text data, we can: \n",
+    "  - split it into individual words or tokens (`Tokenization`); \n",
+    "  - transform it into numerical vectors based on Term Frequency-Inverse Document Frequency (`TF-IDF`);\n",
+    "  - represent words in a continuous vector space, using pre-trained models like Word2Vec or GloVe (`Word Embeddings`)\n",
+    "\n",
+    "We can see below an example of the Ineraction feature creation technique to generate new features on the **diamonds** example dataset ($a^2, a*b$ and $b^2$):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Features:    carat  depth\n",
+      "0   0.23   61.5\n",
+      "1   0.21   59.8\n",
+      "2   0.23   56.9\n",
+      "3   0.29   62.4\n",
+      "4   0.31   63.3\n",
+      "Polynomial Features: [[5.29000e-02 1.41450e+01 3.78225e+03]\n",
+      " [4.41000e-02 1.25580e+01 3.57604e+03]\n",
+      " [5.29000e-02 1.30870e+01 3.23761e+03]\n",
+      " [8.41000e-02 1.80960e+01 3.89376e+03]\n",
+      " [9.61000e-02 1.96230e+01 4.00689e+03]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "poly = PolynomialFeatures(degree=2, interaction_only=False, include_bias=False)\n",
+    "diamond_features = df_diamonds[['carat', 'depth']]\n",
+    "diamond_poly = poly.fit_transform(diamond_features)\n",
+    "print(\"Original Features:\", diamond_features.head())\n",
+    "print(\"Polynomial Features:\", diamond_poly[:5, 2:])"
    ]
   },
   {
