added feature selection

--- a/FeatureEngineering_Selection.ipynb
+++ b/FeatureEngineering_Selection.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "4   0.31     Good     J     SI2   63.3   58.0    335  4.34  4.35  2.75"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,9 +144,12 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.preprocessing import PolynomialFeatures, StandardScaler\n",
-    "from sklearn.feature_selection import VarianceThreshold, SelectKBest, f_regression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import PolynomialFeatures, StandardScaler, OneHotEncoder\n",
+    "from sklearn.feature_selection import VarianceThreshold, SelectKBest, mutual_info_regression, RFE\n",
     "from sklearn.decomposition import PCA\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
     "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
     "from statsmodels.tools.tools import add_constant\n",
     "\n",
@@ -154,7 +157,7 @@
     "df_diamonds = sns.load_dataset(\"diamonds\")  # Numerical-heavy dataset\n",
     "\n",
     "df_diamonds.head()\n",
-    "#df_titanic.head()\n"
+    "\n"
    ]
   },
   {
@@ -390,7 +393,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Extra Resources\n",
+    "## 3. Feature Selection\n",
+    "\n",
+    "Feature selection is the process of selecting a subset of relevant features (variables, predictors) for use in model construction. It is a critical step in the machine learning pipeline because it:\n",
+    "- **improves model performance** by removing irrelevant or redundant features, allowing the model to focus on the most important predictors;\n",
+    "- **reduces overfitting** by simplifying the model by reducing noise from unnecessary features;\n",
+    "- **enhances interpretability**, as fewer features make it easier to understand and explain the model;\n",
+    "- **reduces computational cost**, as fewer features mean faster training and inference times.\n",
+    "\n",
+    "We can apply a variety of techniques in order to achieve this task. These techniques can be grouped into 2 main categories:\n",
+    "\n",
+    "1. **Filter methods:** These techniques select features based on statistical measures independently of the model, and they are computationally efficient. Usually applied as a preprocessing step before applying more complex methods and when working with high-dimensional data. Common techniques include:\n",
+    "   1. **Correlation Coefficient:** Measures linear relationships between features and the target;\n",
+    "   2. **Chi-Square Test:** Measures the dependence between categorical features and the target;\n",
+    "   3. **Mutual Information:** Measures the dependency between features and the target;\n",
+    "   4. **Variance Threshold:** Removes features with low variance (e.g., constant features).\n",
+    "2. **Wrapper methods:** Wrapper methods evaluate subsets of features by training and evaluating a model on each subset. While it considers feature interactions and often results in better-performing models, they can be computationally expensive, as they require training models. They are use when computational resources are sufficient, and feature interactions are important. Some methods include:\n",
+    "   1. **Forward selection:** Starts with no features and iteratively adds the best-performing feature;\n",
+    "   2. **Backward Elimination:** Starts with all features and iteratively removes the least important feature;\n",
+    "   3. **Recursive Feature Elimination (RFE):** Recursively removes the least important features based on model weights (e.g., coefficients in linear models).\n",
+    "\n",
+    "Present in models that support built-in feature selection, embedded methods perform feature selection as part of the final model's training process. They combine the benefits of filter and wrapper methods and are efficient as a bonus. These models include:\n",
+    "   1. **Lasso Regression (L1 Regularization)**\n",
+    "   2. **Ridge Regression (L2 Regularization)**\n",
+    "   3. **Tree-Based Methods**\n",
+    "\n",
+    "Below we can see a feature selection of the diamonds dataset, applying techniques of the 2 main categories previously listed:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected Features (Filter Method): Index(['carat', 'x', 'y', 'z', 'color_E', 'color_F', 'color_G', 'clarity_SI1',\n",
+      "       'clarity_SI2', 'clarity_VS2'],\n",
+      "      dtype='object')\n",
+      "Selected Features (Wrapper Method): Index(['carat', 'x', 'color_J', 'clarity_IF', 'clarity_SI1', 'clarity_SI2',\n",
+      "       'clarity_VS1', 'clarity_VS2', 'clarity_VVS1', 'clarity_VVS2'],\n",
+      "      dtype='object')\n",
+      "TO VALIDATE WE NEED TO TRAIN MODELS ON THE FEATURES SELECTED USING THE METHODS AND COMPARE EVALUATION METRICS LIKE R2 AND MSE.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Preprocessing\n",
+    "# Encode categorical variables\n",
+    "categorical_cols = ['cut', 'color', 'clarity']\n",
+    "encoder = OneHotEncoder(drop='first', sparse_output=False)\n",
+    "encoded_cols = encoder.fit_transform(df_diamonds[categorical_cols])\n",
+    "encoded_cols_df = pd.DataFrame(encoded_cols, columns=encoder.get_feature_names_out(categorical_cols))\n",
+    "\n",
+    "# Combine encoded categorical features with numerical features\n",
+    "numerical_cols = ['carat', 'depth', 'table', 'x', 'y', 'z']\n",
+    "X = pd.concat([df_diamonds[numerical_cols], encoded_cols_df], axis=1)\n",
+    "y = df_diamonds['price']\n",
+    "\n",
+    "# Scale numerical features\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Filter Method: SelectKBest with Mutual Information\n",
+    "selector = SelectKBest(mutual_info_regression, k=10)\n",
+    "X_filtered = selector.fit_transform(X_train, y_train)\n",
+    "selected_features_filter = X.columns[selector.get_support()]\n",
+    "print(\"Selected Features (Filter Method):\", selected_features_filter)\n",
+    "\n",
+    "# Wrapper Method: Recursive Feature Elimination (RFE)\n",
+    "model = LinearRegression()\n",
+    "rfe = RFE(model, n_features_to_select=10)\n",
+    "X_rfe = rfe.fit_transform(X_train, y_train)\n",
+    "selected_features_wrapper = X.columns[rfe.support_]\n",
+    "print(\"Selected Features (Wrapper Method):\", selected_features_wrapper)\n",
+    "\n",
+    "print(\"TO VALIDATE WE NEED TO TRAIN MODELS ON THE FEATURES SELECTED USING THE METHODS AND COMPARE EVALUATION METRICS LIKE R2 AND MSE.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Extra Resources\n",
     "\n",
     "For further reading:\n",
     "- [BuiltIn article](https://builtin.com/articles/feature-engineering)\n",
