--- a/FeatureEngineering_Selection.ipynb
+++ b/FeatureEngineering_Selection.ipynb
@@ -12,7 +12,10 @@
     "\n",
     "## Index\n",
     "\n",
-    "\n",
+    "- [Feature Creation](#1-feature-creation)\n",
+    "- [Multicollinearity](#2-multicollinearity-detection)\n",
+    "- [Feature Selection](#3-feature-selection)\n",
+    "- [Extra Resources](#4-extra-resources)\n",
     "\n",
     "**Libraries and Datasets to use:**"
    ]
@@ -153,9 +156,7 @@
     "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
     "from statsmodels.tools.tools import add_constant\n",
     "\n",
-    "df_titanic = sns.load_dataset(\"titanic\")  # Categorical-heavy dataset\n",
     "df_diamonds = sns.load_dataset(\"diamonds\")  # Numerical-heavy dataset\n",
-    "\n",
     "df_diamonds.head()\n",
     "\n"
    ]
