--- a/DataCleaning_Preprocessing.ipynb
+++ b/DataCleaning_Preprocessing.ipynb
@@ -22,7 +22,7 @@
     "## Index\n",
     "\n",
     "1. [Missing Values](#1-missing-values)\n",
-    "2. [Outlier detection](#2-outlier-detection)\n",
+    "2. [Outlier detection and handling](#2-outlier-detection-and-handling)\n",
     "3. [Encoding Categorical Variables](#3-encoding-categorical-values)\n",
     "4. [Scale and Normalisation](#4-scaling-and-normalizing-numerical-values)\n",
     "5. [Feature Transformations](#5-feature-transformations)\n",
@@ -337,12 +337,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Outlier detection\n",
+    "## 2. Outlier detection and handling\n",
     "\n",
-    "Outliers can skew statistical analyses and models. Here are some common techniques to handle them:\n",
-    "- **Z-score method**: Removing values beyond 3 standard deviations.\n",
-    "- **Interquartile Range (IQR)**: Identifying extreme values.\n",
-    "- **Winsorization**: Capping extreme values."
+    "Outliers are data points that significantly deviate from the rest of the data. They can be unusually high or low compared to the rest of the data, far from the central tendency (mean, median, mode) of the dataset or inconsistent with the overall pattern of the data. \n",
+    "\n",
+    "They are usually caused by human or system errors during data collection, faulty sensors or instruments, extreme but valid observations (e.g., a billionaire in an income dataset) or data points intentionally set to extreme values (e.g., placeholder values like -999).\n",
+    "\n",
+    "Outliers have a huge impact on data, as they can: \n",
+    "\n",
+    "- distort measures like mean, variance, and correlation;\n",
+    "- bias model training, especially in algorithms sensitive to data scale (e.g., linear regression, k-means clustering);\n",
+    "- compress the scale of visualizations, making patterns harder to detect.\n",
+    "\n",
+    "There are several methods to detect outliers, depending on the data types and their distribution:\n",
+    "\n",
+    "- **Statistical Methods:** We can use the `Z-Score` (threshold are usually outside the values -3 and 3) or the `Interquartile Range (IQR)` (data points outside the range between the Q1 and Q3);\n",
+    "- **Visualization Methods:** We resort to `Box plots` (representing the IQR visually), `Scatter Plot` (for bivariate data) or `Histograms` (We can see unusual spikes in the distribution);\n",
+    "- **Machine Learning Methods:** The most common techniques include `Isolation Forest` (unsupervised algorithm that isolates outliers by randomly selecting features and splitting values) and `DBSCAN (Density-Based Spatial Clustering of Applications with Noise)`, which clusters data based on density and identifies outliers as points in low-density regions;\n",
+    "- **Domain-Specific Methods:** Usually the best method is using the domain knowledge of the data to define correct and realistic thresholds and rules to identify outliers (IE, an age of 150 on a healthcare dataset).\n",
+    "\n",
+    "After detection, we have a variety of strategies to deal with identified outliers. We can `remove` them, use `imputation` to replace the values with more reasonable ones, apply `transformations` like log, square root or Box-Cox or simply use `models less sensitive` to outliers, like tree-based models.\n",
+    "\n",
+    "Below we can see different statistical methods in practice to determine the number of outliers in a dataset:"
    ]
   },
   {
