--- a/DataCleaning_Preprocessing.ipynb
+++ b/DataCleaning_Preprocessing.ipynb
@@ -396,11 +396,19 @@
    "source": [
     "## 3. Encoding categorical values\n",
     "\n",
-    "Machine learning models require numerical inputs. As such, categorical data needs to be converted to numerical representations. This process is called encoding. Some of the encoding methods include:\n",
+    "As a quick reminder, categorical variables represent qualitative data and can be divided into two types: `Nominal` (categories without any inherent order) and `Ordinal` (with an hierarchy).\n",
     "\n",
-    "- **Label Encoding**: Assigning numerical values to categories.\n",
-    "- **One-Hot Encoding**: Creating binary columns for each category.\n",
-    "- **Target Encoding**: Replacing categories with mean target value."
+    "As machine learning algorithms typically work with numerical data, encoding categorical variables is often necessary. It ensures that categorical data is represented in a way that preserves its meaning and relationships. Common techniques include:\n",
+    "\n",
+    "- **Label Encoding:** It assigns a unique integer to each category. It is suitable for `ordinal` data where the order matters. While it is simple and efficient, it can introduce artificial ordinality, which may mislead algorithms;\n",
+    "- **One-Hot Encoding:** Creates binary columns for each category and is more suitable for `nominal` data where no order exists. While it preserves the categorical nature of the data, it increases the dimensionality of the dataset;\n",
+    "- **Ordinal Encoding:** It is similar to label encoding but explicitly defines the order of categories and it is even more suitable for clearly `ordinal` data. It preserves the ordinal nature of the applied data, but it is not suitable for `nominal` data;\n",
+    "- **Target Encoding (Mean Encoding):** Replaces each category with the mean of the target variable for that category. It suitable for `high-cardinality` categorical data. While it captures the relationship between the category and the target, it carries the risk of overfitting, especially with rare categories;\n",
+    "- **Frequency Encoding:** Replaces each category with its frequency (count) in the dataset and is also suitable for `high-cardinality` categorical data. As it reduces dimensionality and captures category importance, it may loose information about individual categories;\n",
+    "- **Binary Encoding:** Also suitable for `high-cardinality` categorical data, it converts categories into binary digits and splits them into separate columns. While it balances dimensionality and information preservation, it is less interpretable than, for example, one-hot encoding;\n",
+    "- **Hashing Encoding:** Uses a hash function to convert categories into a fixed number of columns and it is suitable for VERY `high-cardinality` categorical data. While it significantly reduces dimensionality, it is irreversible and may cause collisions.\n",
+    "\n",
+    "Below we have an encoding example. Since the data to encode (sex) is essentially nominal, we can either apply `One-Hot Encoding` or `Binary Encoding`:"
    ]
   },
   {
